# etl-addictions-graph

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  001.sql  AST  GraphStorageAdditionTest.py  README.md  file_scaner.py  flake.nix  pyproject.toml  pytest.ini  request_counter.py  requirements.txt  shell.nix
Sphinx-docs/: conf.py  index.rst  src.base.rst  src.field.rst  src.func.rst  src.rst  src.table.rst  src.util.rst
buff_dml/: 1.ddl  Employee_Procedures.ddl  FeedConsumption_Procedures.ddl  FeedPurchase_Procedures.ddl  Flight_Procedures.ddl  LoftManager_Procedures.ddl  Loft_Manager_Procedures.ddl  Manager_Procedures.ddl  Merge_cte.ddl  PigeonLoft_Procedures.ddl  Pigeon_Procedures.ddl  Pigeon_VetCheck_Procedures.ddl  Supplier_Pigeon_Procedures.ddl  Supplier_Procedures.ddl  VetCheck_Procedures.ddl  specific_user_cases.ddl
ddl/: Employee.ddl  FeedConsumption.ddl  FeedPurchase.ddl  FeedPurchase_to_Employee.sql  Flight.ddl  LoftManager.ddl  Manager.ddl  Pigeon.ddl  PigeonLoft.ddl  Pigeon_etl.sql  Query PigeonLoft.sql  QueryEmploye.ddl  QueryEmploye.sql  Supplier.ddl  Supplier_to_Employee.sql  VetCheck.ddl  dml21_columntest.sql
dml/: dml1.sql  dml10.sql  dml11.sql  dml12.sql  dml13.sql  dml14.sql  dml15.sql  dml16.sql  dml17.sql  dml18.sql  dml19.sql  dml2.sql  dml20.sql  dml3.sql  dml4.sql  dml5.sql  dml6.sql  dml7.sql  dml8.sql  dml9.sql
src/: IR_test.py  Refactored_Sql_parser.py  buff_tables.py  extract_dependencies.py  logger_config.py  main.py  procedure.py  settings.py  sql_corrector.py  sql_separate.py  sql_unite.py
test/: TestGraphStorage.py  (+8 more)
(+79 files in other folders)
