[project]
name = "etl-addictions-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iniconfig==2.0.0",
    "networkx==3.4.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.5",
    "sqlparse==0.5.3",
]
